# orderbook-merge

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
proto/: orderbook.proto
src/: binance.rs  bitstamp.rs  client.rs  data.rs  error.rs  exchange_connection.rs  grpc.rs  main.rs  merger.rs  server.rs
src/exchange/: binance.rs  bitstamp.rs  exchange_client.rs  mod.rs
