[package]
name = "orderbook-merge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
tokio = { version = "1.21", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
url = "*"
futures-util = "0.3.25"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.8.3"
tokio-stream = "0.1.11"
prost = "0.11.3"

[build-dependencies]
tonic-build = "0.8.3"
