[package]
name = "orderbook-merge"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "orderbook-server"
path = "src/server.rs"

[[bin]]
name = "orderbook-client"
path = "src/client.rs"

[dependencies]
futures = "0.3.25"
tokio = { version = "1.21", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
url = "*"
futures-util = "0.3.25"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.8.3"
tokio-stream = "0.1.11"
prost = "0.11.3"
anyhow = "1.0.66"

[build-dependencies]
tonic-build = "0.8.3"
